--- a/mkm/knowledge/templates/base.html
+++ b/mkm/knowledge/templates/base.html
@@ -101,14 +101,16 @@
                 <li class="nav-item">
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
+                {% comment %}
                 <li class="nav-item d-none d-sm-inline-block">
                     <a href="index3.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
                     <a href="#" class="nav-link">Contact</a>
                 </li>
+                {% endcomment %}
             </ul>
-
+            {% comment %}
             <!-- Right navbar links -->
             <ul class="navbar-nav ml-auto">
                 <!-- Navbar Search -->
@@ -235,6 +237,7 @@
                     </a>
                 </li>
             </ul>
+            {% endcomment %}
         </nav>
         <!-- /.navbar -->
 
@@ -267,10 +270,10 @@
                                         alt="User Image">
                                 </div>
                                 <div class="info">
-                                    <a href="#" class="d-block">{{ user|upper }}</a>
+                                    <a href="#" class="d-block">Hello <b>{{ user }}</b>!</a>
                                 </div>
                             </div>
-
+                            {% comment %}
                             <!-- SidebarSearch Form -->
                             <div class="form-inline">
                                 <div class="input-group" data-widget="sidebar-search">
@@ -304,6 +307,31 @@
                                         </a></div>
                                 </div>
                             </div>
+                            {% endcomment %}
+
+                            <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+                                <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu"
+                                    data-accordion="false">
+                                    <!-- Add icons to the links using the .nav-icon class
+                 with font-awesome or any other icon font library -->
+                                    <li class="nav-item">
+                                        <a href="{% url 'index' %}" class="nav-link {% block index %}{% endblock %}">
+                                            <i class="nav-icon fas fa-tachometer-alt"></i>
+                                            <p>
+                                                Home
+                                            </p>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="{% url 'dev' %}" class="nav-link {% block dev %}{% endblock %}">
+                                            <i class="nav-icon fas fa-users"></i>
+                                            <p>
+                                                Authors
+                                            </p>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
 
                             <!-- Sidebar Menu -->
                             <nav class="mt-2">
@@ -311,14 +339,17 @@
                                     data-accordion="false">
                                     <!-- Add icons to the links using the .nav-icon class
                  with font-awesome or any other icon font library -->
-                                    <li class="nav-item">
-                                        <a href="{% url 'index' %}" class="nav-link">
-                                            <i class="far fa-circle nav-icon"></i>
-                                            <p>
-                                                Home
-                                            </p>
-                                        </a>
-                                    </li>
+                                    {% for list_author in author_list %}
+                                        <li class="nav-item">
+                                            <a href="{% url 'author_detail' list_author.pk %}" class="nav-link {% if list_author.pk == author.pk %}active{% endif %}">
+                                                <i class="nav-icon fas fa-user"></i>
+                                                <p>
+                                                    {{ list_author.short_name }}
+                                                </p>
+                                            </a>
+                                        </li>
+                                    {% endfor %}
+                                    {% comment %}
                                     <li class="nav-item">
                                         <a href="{% url 'test1' %}" class="nav-link">
                                             <i class="far fa-circle nav-icon"></i>
@@ -994,6 +1025,7 @@
                                             <p>Informational</p>
                                         </a>
                                     </li>
+                                    {% endcomment %}
                                 </ul>
                             </nav>
                             <!-- /.sidebar-menu -->
