--- a/mkm/knowledge/templates/author_detail.html
+++ b/mkm/knowledge/templates/author_detail.html
@@ -14,12 +14,14 @@
                 <div class="col-sm-6">
                     <h1 class="m-0">{{ author.name }}</h1>
                 </div><!-- /.col -->
+                {% comment %}
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
                         <li class="breadcrumb-item active">Dashboard v1</li>
                     </ol>
                 </div><!-- /.col -->
+                {% endcomment %}
             </div><!-- /.row -->
         </div><!-- /.container-fluid -->
     </div>
