--- a/mkm/knowledge/templates/index.html
+++ b/mkm/knowledge/templates/index.html
@@ -3,6 +3,8 @@
 {% block title %}<title>Index - Knowledge App</title>{% endblock %}
 {% load static %}
 
+{% block index %}active{% endblock %}
+
 {% block content %}
 
 <!-- Content Wrapper. Contains page content -->
@@ -14,12 +16,14 @@
                 <div class="col-sm-6">
                     <h1 class="m-0">Dashboard</h1>
                 </div><!-- /.col -->
+                {% comment %}
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
                         <li class="breadcrumb-item active">Dashboard v1</li>
                     </ol>
                 </div><!-- /.col -->
+                {% endcomment %}
             </div><!-- /.row -->
         </div><!-- /.container-fluid -->
     </div>
@@ -810,7 +814,7 @@
                 </section>
                 <!-- right col -->
 
-                
+                {% comment %}
 
                 <form method="post" action="{% url 'login' %}">
                     {% csrf_token %}
@@ -1218,7 +1222,7 @@
                 {% endfor %}
 
 
-                
+                {% endcomment %}
 
 
             </div>
