new manual and auto actions

--- a/mkm/knowledge/templates/index.html
+++ b/mkm/knowledge/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}<title>Index - Knowledge App</title>{% endblock %}
+{% block title %}<title>Home - Knowledge App</title>{% endblock %}
 {% load static %}
 
 {% block index %}active{% endblock %}
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1 class="m-0">Dashboard</h1>
+                    <h1 class="m-0">Home</h1>
                 </div><!-- /.col -->
                 {% comment %}
                 <div class="col-sm-6">
