--- a/mkm/knowledge/templates/base.html
+++ b/mkm/knowledge/templates/base.html
@@ -242,9 +242,9 @@
         <!-- /.navbar -->
 
         <!-- Main Sidebar Container -->
-        <aside class="main-sidebar elevation-4 sidebar-light-success">
+        <aside class="main-sidebar elevation-4 sidebar-light-info">
             <!-- Brand Logo -->
-            <a href="index3.html" class="brand-link bg-white">
+            <a class="brand-link bg-white">
                 <img src="{% static 'dist/img/AdminLTELogo.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
                     style="opacity: .8">
                 <span class="brand-text font-weight-light">Knowledge App</span>
@@ -270,7 +270,7 @@
                                         alt="User Image">
                                 </div>
                                 <div class="info">
-                                    <a href="#" class="d-block">Hello <b>{{ user }}</b>!</a>
+                                    <a class="d-block">Hello <b>{{ user }}</b>!</a>
                                 </div>
                             </div>
                             {% comment %}
@@ -312,6 +312,9 @@
                             <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                                 <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu"
                                     data-accordion="false">
+
+                                    <li class="nav-header"><b>MANAGE</b></li>
+
                                     <!-- Add icons to the links using the .nav-icon class
                  with font-awesome or any other icon font library -->
                                     <li class="nav-item">
@@ -337,6 +340,9 @@
                             <nav class="mt-2">
                                 <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu"
                                     data-accordion="false">
+
+                                    <li class="nav-header"><b>AUTHORS</b></li>
+
                                     <!-- Add icons to the links using the .nav-icon class
                  with font-awesome or any other icon font library -->
                                     {% for list_author in author_list %}
